--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "astro-template",
   "type": "module",
+  "packageManager": "pnpm@10.25.0",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
